--- a/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
@@ -195,7 +195,7 @@
 						<h3 class="panel-title">菜品列表</h3>
 					</div>
 					<div style="text-align: right;">
-						如果您需要在系统中添加一个新菜品，请点击右边的按钮：<a href="modifydishes.html"
+						如果您需要在系统中添加一个新菜品，请点击右边的按钮：<a href="adddishes.html"
 							class="btn btn-success"
 							style="width:120px;margin-top: 10px;margin-right: 10px">添加菜品</a>
 					</div>
