--- a/order_consumer/src/main/resources/templates/pages/users/modifyuser.html
+++ b/order_consumer/src/main/resources/templates/pages/users/modifyuser.html
@@ -53,7 +53,7 @@
 							<label for="firstname" class="col-sm-2 control-label">用户名:</label>
 							<div class="col-sm-10">
 								<input type="text" class="form-control" id="firstname"
-									name="userAccount" placeholder="${userInfo.useraccount}" disabled="disabled"
+									name="userAccount" placeholder="${waiter.useraccount}" disabled="disabled"
 									value="">
 							</div>
 
