--- a/order_consumer/src/main/resources/templates/pages/admin/adddishes.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/adddishes.html
@@ -212,7 +212,7 @@
 							<h2>设置图片：</h2>
 							<p style="margin-bottom: 10px">菜品图片上传成功后将在下面直接预览。</p>
 							<div style="text-align: center;">
-								<img src="img/dishes/1.jpg" id="face" width="160px"
+								<img src="/img/faces/default.jpg" id="face" width="160px"
 									height="160px" class="img-circle"
 									style="border:3px solid #CCC;" />
 								<p style="margin-top: 15px">当前菜品图像预览</p>
