修改orderinfo并修改xml文件中查询方法

--- a/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
+++ b/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
@@ -116,7 +116,7 @@
                                                         style="border:1px solid #FFF" />&nbsp;&nbsp;当前用户:【${waiter.useraccount}】,身份为服务员
 								<span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li style="text-align: center;padding-top: 15px"><img src="/img/ok.png" width="128" height="128"
+								<li style="text-align: center;padding-top: 15px"><img src="/img/upload/b2aa9737-f67c-4c21-9846-49a553a9752a.png" width="128" height="128"
                                                                                       class="img-circle" style="border:1px solid #CCC;box-shadow:0 0 10px rgba(100, 100, 100, 1);margin-bottom: 20px" /></li>
 								<li><a href="/pages/users/modifyuser.html" target="mainwindow">修改我的密码</a></li>
 								<li role="separator" class="divider"></li>
