--- a/order_consumer/src/main/resources/templates/pages/admin/adddishes.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/adddishes.html
@@ -141,8 +141,8 @@
 
 								<p>
 								<form class="form-horizontal" role="form"
-									style="margin-top: 20px" method="post">
-									<div class="form-group" id="addDish">
+									style="margin-top: 20px" method="post" id="addDish">
+									<div class="form-group">
 										<label for="firstname" class="col-sm-2 control-label">名&nbsp;&nbsp;&nbsp;&nbsp;称:</label>
 										<div class="col-sm-10">
 											<input type="text" class="form-control" id="dishesName"
