菜品修改页面

--- a/order_consumer/src/main/resources/templates/pages/admin/modifydishes.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/modifydishes.html
@@ -230,7 +230,7 @@
 							<h2>设置图片：</h2>
 							<p style="margin-bottom: 10px">菜品图片上传成功后将在下面直接预览。</p>
 							<div style="text-align: center;">
-								<img src="img/upload/${dishesinfo.dishesimg }" id="face"
+								<img src="${dishesinfo.dishesimg }" id="face"
 									width="160px" height="160px" class="img-circle"
 									style="border:3px solid #CCC;" />
 								<p style="margin-top: 15px">当前菜品图像预览</p>
