--- a/order_consumer/src/main/resources/templates/pages/admin/modifydishes.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/modifydishes.html
@@ -103,6 +103,7 @@
 		testState();
 	}
 </script>
+<script type="text/javascript" src="/js/dishes/modifydishes.js"></script>
 </head>
 
 <body style="font-family: 微软雅黑">
@@ -148,8 +149,7 @@
 
 								<p>
 								<form class="form-horizontal" role="form"
-									style="margin-top: 20px" method="post"
-									action="modifydishes.order">
+									style="margin-top: 20px" method="post" id="modifyDish">
 
 									<div class="form-group">
 										<label for="firstname" class="col-sm-2 control-label">名&nbsp;&nbsp;&nbsp;&nbsp;称:</label>
@@ -206,12 +206,12 @@
 
 
 									<input type="hidden" value="${dishesinfo.dishesid }" id="dishesId"
-										name="dishesid" /> <input type="hidden" value="1.jpg"
+										name="dishesid" /> <input type="hidden" value="${dishesinfo.dishesimg }"
 										id="dishesImg" name="dishesimg" />
 
 									<div class="form-group">
 										<div class="col-sm-offset-2 col-sm-10">
-											<input type="submit" class="btn btn-danger" id="addbtu"
+											<input type="button" class="btn btn-danger" id="addbtu"
 												disabled="disabled" value="添加菜品" />
 										</div>
 									</div>
@@ -241,8 +241,7 @@
 								<div>
 
 									<form class="form-inline" role="form"
-										enctype="multipart/form-data"
-										action="upimg.order?path=/img/dishes" name="imgform"
+										enctype="multipart/form-data" name="imgform"
 										target="submitform" method="post">
 
 										<div class="form-group">
@@ -250,9 +249,10 @@
 												type="file" id="inputfile" name="uploadFile"
 												style="width:90px">
 										</div>
-
-										<input type="button" class="btn btn-danger" value="上传图片"
-											onclick="begin()" />
+										<div>
+											<input type="button" class="btn btn-danger" value="上传图片" id="uploadImg"
+												onclick="begin()" />
+										</div>
 									</form>
 								</div>
 
