--- a/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
@@ -32,23 +32,18 @@
             left: 50px;
             display: none;
             background-color: rgba(245, 245, 245, 0.5);
-        }
+        }.clearfix::after {
+             content: "";
+             display: block;
+             clear: both;
+         }
 
-        .clearfix::after {
-            content: "";
-            display: block;
-            clear: both;
-        }
-
-        .status {
-            display: block;
-        }
-
-        bottom {
+        button {
+            border: none;
             outline: none;
         }
 
-        #pictur > img {
+        #pictur>img {
             display: inline-block;
             width: 50px;
             height: 50px;
@@ -62,11 +57,11 @@
             font-weight: bolder;
         }
 
-        .shoppcar > li > div {
+        .shoppcar>li>div {
             float: left;
         }
 
-        .shoppcar > li {
+        .shoppcar>li {
             width: 300px;
             height: 60px;
             margin-left: 20px;
@@ -78,7 +73,7 @@
             float: right;
         }
 
-        #numbers > #nums {
+        #numbers>#nums {
             width: 24px;
             height: 22px;
             text-align: center;
@@ -95,6 +90,7 @@
             font-size: 17px;
             margin-left: 80px;
         }
+
 
         .inputNum {
             vertical-align: middle;
@@ -116,15 +112,6 @@
             transition: color .2s, background-color .2s;
         }
 
-        .btn:active {
-            box-shadow: inset 0 1px rgba(100, 100, 100, .1);
-        }
-
-        .btn:hover {
-            background-color: #e9e9e9;
-            color: #333;
-        }
-
         .btn_plus {
             background-image: linear-gradient(to top, currentColor, currentColor), linear-gradient(to top, currentColor, currentColor);
             background-size: 10px 2px, 2px 10px;
@@ -137,7 +124,8 @@
 
         .test-5::-webkit-scrollbar {
             /*滚动条整体样式*/
-            width: 10px; /*高宽分别对应横竖滚动条的尺寸*/
+            width: 10px;
+            /*高宽分别对应横竖滚动条的尺寸*/
             height: 1px;
         }
 
@@ -145,16 +133,14 @@
             /*滚动条里面小方块*/
             border-radius: 10px;
             background-color: skyblue;
-            background-image: -webkit-linear-gradient(
-                    45deg,
-                    rgba(255, 255, 255, 0.2) 25%,
-                    transparent 25%,
-                    transparent 50%,
-                    rgba(255, 255, 255, 0.2) 50%,
-                    rgba(255, 255, 255, 0.2) 75%,
-                    transparent 75%,
-                    transparent
-            );
+            background-image: -webkit-linear-gradient(45deg,
+            rgba(255, 255, 255, 0.2) 25%,
+            transparent 25%,
+            transparent 50%,
+            rgba(255, 255, 255, 0.2) 50%,
+            rgba(255, 255, 255, 0.2) 75%,
+            transparent 75%,
+            transparent);
         }
 
         .test-5::-webkit-scrollbar-track {
@@ -163,6 +149,97 @@
             background: #ededed;
             border-radius: 10px;
         }
+        #paybutton{
+            width: 300px;
+            height: 50px;
+        }
+        #payMoney{
+            display: inline-block;
+            width: 70px;
+            height: 50px;
+        }
+        .money{
+            position: absolute;
+            padding-top: 35px;
+
+        }
+        .money>.span1{
+            color: #f40;
+        }
+
+        .social-btns .btn,
+        .social-btns .btn:before,
+        .social-btns .btn .fa {
+            transition: all 0.35s;
+            transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
+        }
+        .social-btns {
+            text-align: center;
+            display: inline-block;
+        }
+        .social-btns .btn {
+            width: 150px;
+            height: 50px;
+            outline: none;
+        }
+        button{
+            outline: none;
+        }
+        .outline{
+            outline: none;
+        }
+        .social-btns .btn:before {
+            top: 90%;
+            left: -110%;
+        }
+        .social-btns .btn .fa {
+            -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+        }
+
+        .social-btns .btn.twitter:before {
+            background-color: #f40;
+        }
+        .social-btns .btn.twitter .fa {
+            color: #f40;
+        }
+
+        .social-btns .btn:hover:before {
+            top: -10%;
+            left: -10%;
+
+        }
+        .social-btns .btn:hover .fa {
+            color: #fff;
+            -webkit-transform: scale(1);
+            transform: scale(1);
+        }
+
+        .social-btns .btn {
+            display: inline-block;
+            background-color: rgb(245,245,245);
+            line-height: 30px;
+            margin: 0 10px;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
+            opacity: 0.99;
+        }
+        .social-btns .btn:before {
+            content: "";
+            width: 170%;
+            height: 280%;
+            position: absolute;
+            -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+        }
+        .social-btns .btn .fa {
+            font-size: 20px;
+            vertical-align: middle;
+        }
+
     </style>
 
 </head>
@@ -210,7 +287,9 @@
                         <li id="hint">您的小口袋中还没有菜品!</li>
                     </ul>
                 </div>
-                <button class="button glyphicon glyphicon-shopping-cart">餐车</button>
+                <div class="social-btns ">
+                    <button class="btn twitter button button1" style="border: none;outline: none;"><i class="fa fa-twitter"><span class="glyphicon glyphicon-shopping-cart"></span></i></button>
+                </div>
                 总金额:<input type="text" style="width: 50px; text-align: center;color: #ff4040" id="totalPrice"
                            disabled="disabled" placeholder="0"/>元
             </div>
