--- a/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
@@ -26,16 +26,16 @@
 <script type="text/javascript" src="/js/ajax.js"></script>
 
 <script type="text/javascript">
-	function deleteDishes(id, name, obj) {
-
-		if (confirm("您真的要删除菜品【" + name + "】吗？")) {
-			xmlAjaxRequest("deletedishes.order?dishesId=" + id + "&time="
-					+ Math.random(), "get", true, null, deleteCallback, obj,
-					null);
-
-		}
-
-	}
+	// function deleteDishes(id, name, obj) {
+	//
+	// 	if (confirm("您真的要删除菜品【" + name + "】吗？")) {
+	// 		xmlAjaxRequest("deletedishes.order?dishesId=" + id + "&time="
+	// 				+ Math.random(), "get", true, null, deleteCallback, obj,
+	// 				null);
+	//
+	// 	}
+	//
+	// }
 	function deleteCallback(responseTxt, obj) {
 
 		alert("菜品删除成功！");
