--- a/order_consumer/src/main/resources/templates/pages/admin/modifydishes.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/modifydishes.html
@@ -211,8 +211,7 @@
 
 									<div class="form-group">
 										<div class="col-sm-offset-2 col-sm-10">
-											<input type="button" class="btn btn-danger" id="addbtu"
-												disabled="disabled" value="添加菜品" />
+											<input type="button" class="btn btn-danger" id="addbtu" value="添加菜品" />
 										</div>
 									</div>
 								</form>
