--- a/order_consumer/src/main/resources/templates/pages/admin/adduser.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/adduser.html
@@ -8,26 +8,18 @@
 		<meta http-equiv="expires" content="0">
 		<meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
 		<meta http-equiv="description" content="This is my page">
-		<!--
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	-->
-
-
-
-		<!-- 可选的Bootstrap主题文件（一般不用引入） -->
 
 		<link rel="stylesheet" href="/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/css/dashboard.css">
 		<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-		<script src="bootstrap/js/jquery-1.11.1.min.js"></script>
+		<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
 
 		<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-		<script src="bootstrap/js/bootstrap.min.js"></script>
+		<script src="/bootstrap/js/bootstrap.min.js"></script>
 
-		<script type="text/javascript" src="js/ajax.js"></script>
+		<script type="text/javascript" src="/js/ajax.js"></script>
 		<script type="text/javascript">
 			function begin() {
-
 				var input = document.getElementById("inputfile");
 				if (input.value != "") {
 					var preview = document.getElementById("face");
@@ -35,9 +27,7 @@
 					imgform.submit();
 					request();
 				}
-
 			}
-
 			function request() {
 				txtAjaxRequest(
 					"state.order?messageTitle=upstate&time=" + Math.random(),
@@ -111,11 +101,8 @@
 			<div class="row" style="padding: 45px 0px 0px 200px">
 				<div style="width: 50%;display: inline-block;">
 					<div>
-
 						<h2>请填写员工账户信息：</h2>
 						<p>请在下面的表单中填写新增加的员工所使用的用户名及密码</p>
-
-
 						<div class="panel panel-danger">
 							<div class="panel-heading"><i class="icon-warning-sign"></i>&nbsp;注意事项</div>
 							<div class="panel-body">本系统中用户名唯一，即不能使用系统中已经存在的用户名，两次输入的密码必须一致，否则系统拒绝添加用户，如果不再左边的界面中为用户选择自定义的头像，用户将拥有系统默认的头像图片。</div>
